# term

./: .32_1_cilled_ok_nondet_linux-3.4-32_1-drivers--gpu--drm--drm_usb.ko-ldv_main0_sequence_infinite_withcheck_stateful.cil.out_instrumented.c.swp  .soft_float_1-2a.c.cil_braced_instrumented.c.swp  32_1_cilled_ok_nondet_linux-3.4-32_1-drivers--gpu--drm--drm_usb.ko-ldv_main0_sequence_infinite_withcheck_stateful.cil.out_instrumented.c  32_1_cilled_ok_nondet_linux-3.4-32_1-drivers--mtd--devices--phram.ko-ldv_main0_sequence_infinite_withcheck_stateful.cil.out_braced.c  32_1_cilled_ok_nondet_linux-3.4-32_1-drivers--mtd--devices--phram.ko-ldv_main0_sequence_infinite_withcheck_stateful.cil.out_braced_instrumented.c  Bangalore_v2_1_instrumented.c  Bangalore_v2_2_instrumented.c  Bangalore_v2_check_instrumented.c  Bangalore_v2_instrumented.c  CMakeLists.txt  OutFile.txt  Problem01_label00_instrumented.c  Problem02_label33_instrumented.c  Problem03_label12_instrumented.c  Problem04_label15_instrumented.c  Problem04_label24_braced.c  Problem04_label24_braced_instrumented.c  Problem04_label_instrumented.c  Problem10_label24_instrumented.c  Problem11_label20_instrumented.c  Problem14_label34_instrumented.c  Problem16_label28_instrumented.c  Problem19_label38_instrumented.c  PyASTConsumer.cpp  PyASTConsumer.h  PyASTVisitor.cpp  PyASTVisitor.h  README.md  Sunset_braced.c  Sunset_braced_instrumented.c  Sunset_instrumented.c  SyntaxSupportPointer01-1_instrumented.c  a.out  avg05-1_instrumented.c  b.13-alloca_braced.c  b.13-alloca_braced_instrumented.c  b.13-alloca_instrumented.c  clean.sh  cll_by_lseg-alloca-2_braced.c  cll_by_lseg-alloca-2_braced_instrumented.c  (+35 more)
bounty/: LICENSE  README  bounty-noinstr  bounty.sh  run-gl-uw.sh  run-one-bounty.sh  run-z3-uw.sh
docs/: termination.xlsx
input/: .Bangalore_v2.c.swp  32_1_cilled_ok_nondet_linux-3.4-32_1-drivers--gpu--drm--drm_usb.ko-ldv_main0_sequence_infinite_withcheck_stateful.cil.out.c  32_1_cilled_ok_nondet_linux-3.4-32_1-drivers--mtd--devices--phram.ko-ldv_main0_sequence_infinite_withcheck_stateful.cil.out.c  Arrays03-ValueRestictsIndex-2.c:Zone.Identifier  Bangalore_v2.c  Bangalore_v2_1.c  Bangalore_v2_2.c  Bangalore_v2_check.c  Bangalore_v2_for.c  Bangalore_v2_mod.c  Problem14_label34-inst.c  Sunset.c  SyntaxSupportPointer01-1.c:Zone.Identifier  avg05-1.c:Zone.Identifier  b.13-alloca.i:Zone.Identifier  cstrcmp_reverse_alloca.i:Zone.Identifier  display-bit.c:Zone.Identifier  display-bit1.i:Zone.Identifier  minepump_spec1_product01.cil.c:Zone.Identifier  minepump_spec4_product27.cil.c:Zone.Identifier  test1.c  test2.c  test2_braced.c  velroyen-alloca-extract.c
misc/: count_brackets.py  count_cerr.py  count_else_if.py  createllvmlist.py  llvmlibs  llvmlibs.txt  old-PyASTVisitor.cpp
proton/: 1.py  Dockerfile  LICENSE  README  bracer.py  check_ter.py  config.py  docker-compose.yml  extract.py  instrumenter.py  llm-dependencies.LICENSE  llm-t-check.sh  model_handler.py  parse_trace_vf.py  promptlibrary.py  proton  proton.py  proton.xml  proton.yml  run-gl-and-z3.sh  run-kissat-uw.sh  run-one-bounty.sh  run-one-gl.sh  run-one-z3.sh  sample.c  summary.py  sv_term_bench.py  t-check.sh  tinputs.c  utils.py  validate_test.py  virtualenv_tools.py  wit1.py
proton/include/: instrumenter.h
proton/venv-proton/: pyvenv.cfg
